Ajout du menu avec 7 rubriques et mise en page complète

--- a/index.html
+++ b/index.html
@@ -3,32 +3,75 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Rubrique 3 – Schémas</title>
+  <title>Site L3 SI – Rubriques</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
+  <!-- Barre de navigation -->
   <header class="navbar">
-    <h1>Rubrique 3 – Schémas</h1>
+    <div class="logo">L3 SI MIAGE</div>
     <nav>
-      <a href="../">Accueil</a>
+      <ul class="menu">
+        <li><a href="#rubrique1">Rubrique 1</a></li>
+        <li><a href="#rubrique2">Rubrique 2</a></li>
+        <li><a href="#rubrique3">Rubrique 3</a></li>
+        <li><a href="#rubrique4">Rubrique 4</a></li>
+        <li><a href="#rubrique5">Rubrique 5</a></li>
+        <li><a href="#rubrique6">Rubrique 6</a></li>
+        <li><a href="#rubrique7">Rubrique 7</a></li>
+      </ul>
     </nav>
   </header>
 
-  <main class="rubrique3">
-    <section class="schema-card">
-      <h2>Schéma 1 : Diagramme des flux</h2>
-      <img src="SchemaDiagrammeDesFluxPhoto.png" alt="Diagramme des flux" class="schema-image">
+  <!-- Contenu principal -->
+  <main>
+    <section id="rubrique1" class="rubrique">
+      <h2>Rubrique 1</h2>
+      <p>Contenu à venir...</p>
     </section>
 
-    <section class="schema-card">
-      <h2>Schéma 2 : Événement – Résultat (Cas Quilou)</h2>
-      <img src="SchemaEvenementResultatCasQuilou.png" alt="Schéma événement résultat" class="schema-image">
+    <section id="rubrique2" class="rubrique">
+      <h2>Rubrique 2</h2>
+      <p>Contenu à venir...</p>
+    </section>
+
+    <section id="rubrique3" class="rubrique">
+      <h2>Rubrique 3 – Schémas</h2>
+      <div class="schema-card">
+        <h3>Schéma 1 : Diagramme des flux</h3>
+        <img src="SchemaDiagrammeDesFluxPhoto.png" alt="Diagramme des flux" class="schema-image">
+      </div>
+
+      <div class="schema-card">
+        <h3>Schéma 2 : Événement – Résultat (Cas Quilou)</h3>
+        <img src="SchemaEvenementResultatCasQuilou.png" alt="Schéma événement résultat" class="schema-image">
+      </div>
+    </section>
+
+    <section id="rubrique4" class="rubrique">
+      <h2>Rubrique 4</h2>
+      <p>Contenu à venir...</p>
+    </section>
+
+    <section id="rubrique5" class="rubrique">
+      <h2>Rubrique 5</h2>
+      <p>Contenu à venir...</p>
+    </section>
+
+    <section id="rubrique6" class="rubrique">
+      <h2>Rubrique 6</h2>
+      <p>Contenu à venir...</p>
+    </section>
+
+    <section id="rubrique7" class="rubrique">
+      <h2>Rubrique 7</h2>
+      <p>Contenu à venir...</p>
     </section>
   </main>
 
   <footer class="footer">
-    <p>© 2025 – L3 SI MIAGE – Rubrique 3</p>
+    <p>© 2025 – L3 SI MIAGE – Site des 7 rubriques</p>
   </footer>
 
 </body>
