Ajout du PDF SchemaGantt et création de la Rubrique 8

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li><a href="#rubrique5">Rubrique 5</a></li>
         <li><a href="#rubrique6">Rubrique 6</a></li>
         <li><a href="#rubrique7">Rubrique 7</a></li>
+        <li><a href="#rubrique8">Rubrique 8</a></li>
       </ul>
     </nav>
   </header>
@@ -38,6 +39,7 @@
 
     <section id="rubrique3" class="rubrique">
       <h2>Rubrique 3 – Schémas</h2>
+
       <div class="schema-card">
         <h3>Schéma 1 : Diagramme des flux</h3>
         <img src="SchemaDiagrammeDesFluxPhoto.png" alt="Diagramme des flux" class="schema-image">
@@ -46,6 +48,19 @@
       <div class="schema-card">
         <h3>Schéma 2 : Événement – Résultat (Cas Quilou)</h3>
         <img src="SchemaEvenementResultatCasQuilou.png" alt="Schéma événement résultat" class="schema-image">
+      </div>
+
+      <div class="schema-card">
+        <h3>Schéma 3 : Diagramme de Gantt</h3>
+        <iframe 
+          src="SchemaGantt.pdf"
+          width="100%"
+          height="500px"
+          style="border: 1px solid #e5e7eb; border-radius: 10px;">
+        </iframe>
+        <p style="margin-top:10px;">
+          <a href="SchemaGantt.pdf" target="_blank" class="pdf-link">Télécharger / Ouvrir le PDF</a>
+        </p>
       </div>
     </section>
 
@@ -68,10 +83,26 @@
       <h2>Rubrique 7</h2>
       <p>Contenu à venir...</p>
     </section>
+
+    <section id="rubrique8" class="rubrique">
+      <h2>Rubrique 8 – Schéma Gantt</h2>
+      <p>Voici le diagramme de Gantt du projet :</p>
+
+      <iframe 
+        src="SchemaGantt.pdf" 
+        width="100%" 
+        height="600px" 
+        style="border: 1px solid #e5e7eb; border-radius: 10px;">
+      </iframe>
+
+      <p style="text-align:center; margin-top:15px;">
+        <a href="SchemaGantt.pdf" target="_blank" class="pdf-link">Ouvrir le PDF dans un nouvel onglet</a>
+      </p>
+    </section>
   </main>
 
   <footer class="footer">
-    <p>© 2025 – L3 SI MIAGE – Site des 7 rubriques</p>
+    <p>© 2025 – L3 SI MIAGE – Site des 8 rubriques</p>
   </footer>
 
 </body>
