--- a/index.html
+++ b/index.html
@@ -3,106 +3,77 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Site L3 SI – Rubriques</title>
+  <title>L3 MIAGE – Systèmes d’Information</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
-  <!-- Barre de navigation -->
-  <header class="navbar">
-    <div class="logo">L3 SI MIAGE</div>
-    <nav>
-      <ul class="menu">
-        <li><a href="#rubrique1">Rubrique 1</a></li>
-        <li><a href="#rubrique2">Rubrique 2</a></li>
-        <li><a href="#rubrique3">Rubrique 3</a></li>
-        <li><a href="#rubrique4">Rubrique 4</a></li>
-        <li><a href="#rubrique5">Rubrique 5</a></li>
-        <li><a href="#rubrique6">Rubrique 6</a></li>
-        <li><a href="#rubrique7">Rubrique 7</a></li>
-        <li><a href="#rubrique8">Rubrique 8</a></li>
-      </ul>
-    </nav>
+  <!-- ======== HERO / BANNIÈRE ======== -->
+  <header class="hero">
+    <div class="hero-content">
+      <h1 class="hero-title">L3 MIAGE – Systèmes d’Information</h1>
+      <p class="hero-subtitle">
+        Découvrez toutes les ressources, travaux et documents du projet SI dans un espace moderne, girly et élégant 💗
+      </p>
+      <a href="#travaux" class="hero-btn">Accéder aux catégories</a>
+    </div>
   </header>
 
-  <!-- Contenu principal -->
-  <main>
-    <section id="rubrique1" class="rubrique">
-      <h2>Rubrique 1</h2>
-      <p>Contenu à venir...</p>
-    </section>
+  <!-- ======== NAVBAR ======== -->
+  <nav class="navbar">
+    <div class="logo">L3 SI MIAGE</div>
+    <ul class="menu">
+      <li><a href="#travaux">Travaux</a></li>
+      <li><a href="#notes">Notes de cours</a></li>
+      <li><a href="#certifications">Certifications</a></li>
+      <li><a href="#projet">Projet</a></li>
+      <li><a href="#ressources">Autres ressources</a></li>
+      <li><a href="#diaporama">Diaporama pour la soutenance</a></li>
+      <li><a href="#documents-si">Documents d'un système d'information</a></li>
+    </ul>
+  </nav>
 
-    <section id="rubrique2" class="rubrique">
-      <h2>Rubrique 2</h2>
-      <p>Contenu à venir...</p>
-    </section>
+  <!-- ======== SECTIONS ======== -->
 
-    <section id="rubrique3" class="rubrique">
-      <h2>Rubrique 3 – Schémas</h2>
+  <section id="travaux" class="rubrique">
+    <h2>Travaux</h2>
+    <p>Contenu à venir...</p>
+  </section>
 
-      <div class="schema-card">
-        <h3>Schéma 1 : Diagramme des flux</h3>
-        <img src="SchemaDiagrammeDesFluxPhoto.png" alt="Diagramme des flux" class="schema-image">
-      </div>
+  <section id="notes" class="rubrique">
+    <h2>Notes de cours</h2>
+    <p>Contenu à venir...</p>
+  </section>
 
-      <div class="schema-card">
-        <h3>Schéma 2 : Événement – Résultat (Cas Quilou)</h3>
-        <img src="SchemaEvenementResultatCasQuilou.png" alt="Schéma événement résultat" class="schema-image">
-      </div>
+  <section id="certifications" class="rubrique">
+    <h2>Certifications</h2>
+    <p>Contenu à venir...</p>
+  </section>
 
-      <div class="schema-card">
-        <h3>Schéma 3 : Diagramme de Gantt</h3>
-        <iframe 
-          src="SchemaGantt.pdf"
-          width="100%"
-          height="500px"
-          style="border: 1px solid #e5e7eb; border-radius: 10px;">
-        </iframe>
-        <p style="margin-top:10px;">
-          <a href="SchemaGantt.pdf" target="_blank" class="pdf-link">Télécharger / Ouvrir le PDF</a>
-        </p>
-      </div>
-    </section>
+  <section id="projet" class="rubrique">
+    <h2>Projet</h2>
+    <p>Contenu à venir...</p>
+  </section>
 
-    <section id="rubrique4" class="rubrique">
-      <h2>Rubrique 4</h2>
-      <p>Contenu à venir...</p>
-    </section>
+  <section id="ressources" class="rubrique">
+    <h2>Autres ressources</h2>
+    <p>Contenu à venir...</p>
+  </section>
 
-    <section id="rubrique5" class="rubrique">
-      <h2>Rubrique 5</h2>
-      <p>Contenu à venir...</p>
-    </section>
+  <section id="diaporama" class="rubrique">
+    <h2>Diaporama pour la soutenance</h2>
+    <p>Contenu à venir...</p>
+  </section>
 
-    <section id="rubrique6" class="rubrique">
-      <h2>Rubrique 6</h2>
-      <p>Contenu à venir...</p>
-    </section>
+  <section id="documents-si" class="rubrique">
+    <h2>Documents d'un système d'information</h2>
+    <p>Contenu à venir...</p>
+  </section>
 
-    <section id="rubrique7" class="rubrique">
-      <h2>Rubrique 7</h2>
-      <p>Contenu à venir...</p>
-    </section>
-
-    <section id="rubrique8" class="rubrique">
-      <h2>Rubrique 8 – Schéma Gantt</h2>
-      <p>Voici le diagramme de Gantt du projet :</p>
-
-      <iframe 
-        src="SchemaGantt.pdf" 
-        width="100%" 
-        height="600px" 
-        style="border: 1px solid #e5e7eb; border-radius: 10px;">
-      </iframe>
-
-      <p style="text-align:center; margin-top:15px;">
-        <a href="SchemaGantt.pdf" target="_blank" class="pdf-link">Ouvrir le PDF dans un nouvel onglet</a>
-      </p>
-    </section>
-  </main>
-
+  <!-- ======== FOOTER ======== -->
   <footer class="footer">
-    <p>© 2025 – L3 SI MIAGE – Site des 8 rubriques</p>
+    <p>© 2025 – L3 MIAGE – Systèmes d’Information</p>
   </footer>
 
 </body>
