--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
 <body>
 
-
   <!-- ======== NAVBAR ======== -->
   <nav class="navbar">
     <div class="logo">L3 SI MIAGE</div>
@@ -26,99 +25,67 @@
 
   <!-- ======== SECTIONS ======== -->
 
+  <!-- ======== TRAVAUX ======== -->
   <section id="travaux" class="rubrique">
-<<<<<<< HEAD
-  <h2>Travaux</h2>
-
-  <div class="sub-category">
-    <h3 class="sub-title">TD 1</h3>
-
-    <div class="doc-list">
-
-      <a class="doc-item" href="/mnt/data/TD 1 SI (1).docx" download>
-        📄 TD 1 – Systèmes d’Information (DOCX)
-      </a>
-
-      <a class="doc-item" href="/mnt/data/td_PGI_exercice.docx" download>
-        📄 Exercice PGI – TD 1 (DOCX)
-      </a>
-
-      <a class="doc-item" href="/mnt/data/Copie de PGI_exercice.xls" download>
-        📊 Fichier Excel – PGI (XLS)
-      </a>
-
-    </div>
-  </div>
-
-</section>
-
-
-  <section id="notes" class="rubrique">
-    <h2>Notes de cours</h2>
-    <p>Contenu à venir...</p>
-  </section>
-
-  <section id="certifications" class="rubrique">
-    <h2>Certifications</h2>
-    <p>Contenu à venir...</p>
-  </section>
-
-  <section id="projet" class="rubrique">
-    <h2>Projet</h2>
-    <p>Contenu à venir...</p>
-  </section>
-
-  <section id="ressources" class="rubrique">
-    <h2>Autres ressources</h2>
-    <p>Contenu à venir...</p>
-  </section>
-
-  <section id="diaporama" class="rubrique">
-    <h2>Diaporama pour la soutenance</h2>
-    <p>Contenu à venir...</p>
-  </section>
-
-  <section id="documents-si" class="rubrique">
-    <h2>Documents d'un système d'information</h2>
-    <p>Contenu à venir...</p>
-  </section>
-
-=======
     <h2>Travaux</h2>
-    <p>Contenu à venir...</p>
+
+    <div class="sub-category">
+      <h3 class="sub-title">TD 1</h3>
+
+      <div class="doc-list">
+
+        <a class="doc-item" 
+           href="document/TD 1 SI (1).docx" 
+           download>
+          📄 TD 1 – Systèmes d’Information (DOCX)
+        </a>
+
+        <a class="doc-item" 
+           href="document/Copie de PGI_exercice.xls" 
+           download>
+          📊 Copie de PGI – Exercice (XLS)
+        </a>
+
+      </div>
+    </div>
   </section>
 
+  <!-- ======== NOTES DE COURS ======== -->
   <section id="notes" class="rubrique">
     <h2>Notes de cours</h2>
     <p>Contenu à venir...</p>
   </section>
 
+  <!-- ======== CERTIFICATIONS ======== -->
   <section id="certifications" class="rubrique">
     <h2>Certifications</h2>
     <p>Contenu à venir...</p>
   </section>
 
+  <!-- ======== PROJET ======== -->
   <section id="projet" class="rubrique">
     <h2>Projet</h2>
     <p>Contenu à venir...</p>
   </section>
 
+  <!-- ======== AUTRES RESSOURCES ======== -->
   <section id="ressources" class="rubrique">
     <h2>Autres ressources</h2>
     <p>Contenu à venir...</p>
   </section>
 
+  <!-- ======== DIAPORAMA SOUTENANCE ======== -->
   <section id="diaporama" class="rubrique">
     <h2>Diaporama pour la soutenance</h2>
     <p>Contenu à venir...</p>
   </section>
 
+  <!-- ======== DOCUMENTS SI ======== -->
   <section id="documents-si" class="rubrique">
     <h2>Documents d'un système d'information</h2>
     <p>Contenu à venir...</p>
   </section>
 
->>>>>>> a6bc11329ee874bff955ba9e86f397746b4f91a3
   <!-- ======== FOOTER ======== -->
   <footer class="footer">
     <p>© 2025 – L3 MIAGE – Systèmes d’Information</p>
@@ -126,3 +93,4 @@
 
 </body>
 </html>
+
