--- a/index.html
+++ b/index.html
@@ -26,29 +26,53 @@
   <!-- ======== SECTIONS ======== -->
 
   <!-- ======== TRAVAUX ======== -->
-  <section id="travaux" class="rubrique">
-    <h2>Travaux</h2>
+<section id="travaux" class="rubrique">
+  <h2>Travaux</h2>
 
-    <div class="sub-category">
-      <h3 class="sub-title">TD 1</h3>
+  <!-- ===== TD 1 ===== -->
+  <div class="sub-category">
+    <h3 class="sub-title">TD 1</h3>
 
-      <div class="doc-list">
+    <div class="doc-list">
 
-        <a class="doc-item" 
-           href="document/TD 1 SI (1).docx" 
-           download>
-          📄 TD 1 – Systèmes d’Information (DOCX)
-        </a>
+      <a class="doc-item" 
+         href="document/TD 1 SI (1).docx" 
+         download>
+        📄 TD 1 – Systèmes d’Information (DOCX)
+      </a>
 
-        <a class="doc-item" 
-           href="document/Copie de PGI_exercice.xls" 
-           download>
-          📊 Copie de PGI – Exercice (XLS)
-        </a>
+      <a class="doc-item" 
+         href="document/Copie de PGI_exercice.xls" 
+         download>
+        📊 Copie de PGI – Exercice (XLS)
+      </a>
 
-      </div>
     </div>
-  </section>
+  </div>
+
+
+  <!-- ===== TD 2 ===== -->
+  <div class="sub-category">
+    <h3 class="sub-title">TD 2 – Odoo</h3>
+
+    <div class="doc-list">
+
+      <a class="doc-item" 
+         href="document/TD2 si.docx" 
+         download>
+        📄 TD 2 – Étude de cas RetailMarket (DOCX)
+      </a>
+
+      <a class="doc-item" 
+         href="document/TP Odoo.docx" 
+         download>
+        🧩 TP – Odoo (DOCX)
+      </a>
+
+    </div>
+  </div>
+
+</section>
 
   <!-- ======== NOTES DE COURS ======== -->
   <section id="notes" class="rubrique">
