--- a/index.html
+++ b/index.html
@@ -71,6 +71,27 @@
 
     </div>
   </div>
+<!-- ===== TD 3 ===== -->
+  <div class="sub-category">
+    <h3 class="sub-title">TD 3 – Processus de gestion & modélisation</h3>
+
+    <div class="doc-list">
+
+      <a class="doc-item" href="document/dossier 3-2.docx" download>
+        📄 TD3 – Processus de gestion & modélisation (DOCX)
+      </a>
+
+      <a class="doc-item" href="document/training shéma acteur flux (1).pdf" download>
+        📘 Schéma acteur–flux (PDF)
+      </a>
+
+      <a class="doc-item" href="document/SchemaEvenementResultatCasQuilou.png" download>
+        🖼️ Schéma Événement–Résultat (PNG)
+      </a>
+
+    </div>
+  </div>
+
 
 </section>
 
