--- a/index.html
+++ b/index.html
@@ -91,6 +91,32 @@
 
     </div>
   </div>
+  <!-- ===== TD 4 ===== -->
+  <div class="sub-category">
+    <h3 class="sub-title">TD 4 – Événement / Résultat</h3>
+
+    <div class="doc-list">
+
+      <a class="doc-item" 
+         href="document/TD4_schéma.png" 
+         download>
+        🖼️ Schéma événement–résultat (PNG)
+      </a>
+
+      <a class="doc-item" 
+         href="document/A2.2_TD2_ProcessusOrganisationnel (1).pdf" 
+         download>
+        📘 Processus organisationnel – PDF
+      </a>
+
+      <a class="doc-item" 
+         href="document/les livrables SI.docx" 
+         download>
+        📄 Les livrables d’un SI – DOCX
+      </a>
+
+    </div>
+  </div>
 
 
 </section>
