--- a/index.html
+++ b/index.html
@@ -117,6 +117,38 @@
 
     </div>
   </div>
+  <!-- ===== TD 5 ===== -->
+  <div class="sub-category">
+    <h3 class="sub-title">TD 5 – MCD & Diagramme de Gantt</h3>
+
+    <div class="doc-list">
+
+      <a class="doc-item" 
+         href="document/MCD.drawio.pdf" 
+         download>
+        🧩 MCD – Modèle Conceptuel de Données (PDF)
+      </a>
+
+      <a class="doc-item" 
+         href="document/TD MCD.pdf" 
+         download>
+        📘 TD MCD – Énoncé & correction (PDF)
+      </a>
+
+      <a class="doc-item" 
+         href="document/tp gantt-2.docx" 
+         download>
+        📄 TP – Diagramme de Gantt (DOCX)
+      </a>
+
+      <a class="doc-item" 
+         href="document/SchemaGantt.pdf" 
+         download>
+        📊 Diagramme de Gantt – Résultat (PDF)
+      </a>
+
+    </div>
+  </div>
 
 
 </section>
