--- a/index.html
+++ b/index.html
@@ -150,6 +150,32 @@
     </div>
   </div>
 
+  <!-- ===== TD 6 ===== -->
+  <div class="sub-category">
+    <h3 class="sub-title">TD 6 – Cas d'utilisation & Diagramme de Classes</h3>
+
+    <div class="doc-list">
+
+      <a class="doc-item" 
+         href="document/cours use case.pdf" 
+         download>
+        📘 Cours UML – Diagrammes de cas d’utilisation (PDF)
+      </a>
+
+      <a class="doc-item" 
+         href="document/USE CASE.docx" 
+         download>
+        📄 Exercices Use Case – Réservations, magasin, DAB… (DOCX)
+      </a>
+
+      <a class="doc-item" 
+         href="document/Diagramme des classes.pdf" 
+         download>
+        🧩 Diagramme de Classes – Gestion de vols (PDF)
+      </a>
+
+    </div>
+  </div>
 
 </section>
 
