--- a/index.html
+++ b/index.html
@@ -180,10 +180,50 @@
 </section>
 
   <!-- ======== NOTES DE COURS ======== -->
-  <section id="notes" class="rubrique">
-    <h2>Notes de cours</h2>
-    <p>Contenu à venir...</p>
-  </section>
+<section id="notes" class="rubrique">
+  <h2>Notes de cours</h2>
+
+  <!-- Cours 1 : Système d'information & Information -->
+  <div class="sub-category">
+    <h3 class="sub-title">Cours : Système d'information & Information</h3>
+
+    <div class="doc-list">
+      <a class="doc-item" 
+         href="document/cours information.pdf" 
+         download>
+        📘 Cours – Information, qualité, SI, processus & flux (PDF)
+      </a>
+    </div>
+  </div>
+
+  <!-- Cours 2 : Gestion de projet SI -->
+  <div class="sub-category">
+    <h3 class="sub-title">Cours : Gestion de projet SI</h3>
+
+    <div class="doc-list">
+      <a class="doc-item" 
+         href="document/cours gestion de projet version étudiant.pdf" 
+         download>
+        📗 Cours – Cycle en V, Agile, PRINCE2, pilotage (PDF)
+      </a>
+    </div>
+  </div>
+
+  <!-- Notes manuscrites -->
+  <div class="sub-category">
+    <h3 class="sub-title">Prises de notes</h3>
+
+    <div class="doc-list">
+      <a class="doc-item" 
+         href="document/Prise de note.odt" 
+         download>
+        📝 Notes de cours – SI, PGI, Odoo, processus, SFG/SFD (ODT)
+      </a>
+    </div>
+  </div>
+
+</section>
+
 
   <!-- ======== CERTIFICATIONS ======== -->
   <section id="certifications" class="rubrique">
