--- a/index.html
+++ b/index.html
@@ -244,10 +244,25 @@
   </section>
 
   <!-- ======== DIAPORAMA SOUTENANCE ======== -->
-  <section id="diaporama" class="rubrique">
-    <h2>Diaporama pour la soutenance</h2>
-    <p>Contenu à venir...</p>
-  </section>
+ <section id="diaporama" class="rubrique">
+  <h2>Diaporama pour la soutenance</h2>
+
+  <div class="sub-category">
+    <h3 class="sub-title">Présentation finale – Centre de formation</h3>
+
+    <div class="doc-list">
+
+      <a class="doc-item" 
+         href="document/Systeme-dinformation-Centre-de-formation.pptx" 
+         download>
+        🎤 Diaporama complet – Soutenance du projet SI (PPTX)
+      </a>
+
+    </div>
+  </div>
+
+</section>
+
 
   <!-- ======== DOCUMENTS SI ======== -->
   <section id="documents-si" class="rubrique">
