--- a/index.html
+++ b/index.html
@@ -265,10 +265,117 @@
 
 
   <!-- ======== DOCUMENTS SI ======== -->
-  <section id="documents-si" class="rubrique">
-    <h2>Documents d'un système d'information</h2>
-    <p>Contenu à venir...</p>
-  </section>
+<section id="documents-si" class="rubrique">
+  <h2>Documents d'un système d'information</h2>
+
+  <!-- ===== PHASE 1 — ANALYSE ===== -->
+  <div class="sub-category">
+    <h3 class="sub-title">Phase 1 — Analyse</h3>
+
+    <div class="doc-list">
+
+      <a class="doc-item" href="document/1.1 Cahier des charges-2.docx" download>
+        📝 1.1 Cahier des charges (DOCX)
+      </a>
+
+      <a class="doc-item" href="document/1.2 Etude de faisabilité.docx" download>
+        📄 1.2 Étude de faisabilité (DOCX)
+      </a>
+
+      <a class="doc-item" href="document/1.3 Plan de projet-2.docx" download>
+        📘 1.3 Plan de projet (DOCX)
+      </a>
+
+    </div>
+  </div>
+
+
+  <!-- ===== PHASE 2 — SPÉCIFICATIONS ===== -->
+  <div class="sub-category">
+    <h3 class="sub-title">Phase 2 — Spécifications</h3>
+
+    <div class="doc-list">
+
+      <a class="doc-item" href="document/2.1 SFG-2.docx" download>
+        🧩 2.1 SFG – Spécifications Fonctionnelles Générales (DOCX)
+      </a>
+
+      <a class="doc-item" href="document/2.2 SFD-3.docx" download>
+        📘 2.2 SFD – Spécification Fonctionnelle Détaillée (DOCX)
+      </a>
+
+      <a class="doc-item" href="document/2.3 spécifications techniques-2.docx" download>
+        🔧 2.3 Spécifications techniques (DOCX)
+      </a>
+
+    </div>
+  </div>
+
+
+  <!-- ===== PHASE 3 — CONCEPTION ===== -->
+  <div class="sub-category">
+    <h3 class="sub-title">Phase 3 — Conception</h3>
+
+    <div class="doc-list">
+
+      <a class="doc-item" href="document/MCD.png" download>
+        🗂️ MCD — Modèle Conceptuel de Données (PNG)
+      </a>
+
+      <a class="doc-item" href="document/Maquette Figma.pdf" download>
+        🎨 Maquettes Figma (PDF)
+      </a>
+
+    </div>
+  </div>
+
+
+  <!-- ===== PHASE 4 — DOCUMENTATION TECHNIQUE ===== -->
+  <div class="sub-category">
+    <h3 class="sub-title">Phase 4 — Documentation technique</h3>
+
+    <div class="doc-list">
+
+      <a class="doc-item" href="document/4.1 Documentation technique.pdf" download>
+        🛠️ Documentation technique développeur (PDF)
+      </a>
+
+    </div>
+  </div>
+
+
+  <!-- ===== PHASE 5 — TESTS ===== -->
+  <div class="sub-category">
+    <h3 class="sub-title">Phase 5 — Tests</h3>
+
+    <div class="doc-list">
+
+      <a class="doc-item" href="document/4.2 Plan de tests.pdf" download>
+        🧪 4.2 Plan de tests (PDF)
+      </a>
+
+      <a class="doc-item" href="document/4.3 Rapports de tests.pdf" download>
+        📊 4.3 Rapport de tests (PDF)
+      </a>
+
+    </div>
+  </div>
+
+
+  <!-- ===== PHASE 6 — EXPLOITATION ===== -->
+  <div class="sub-category">
+    <h3 class="sub-title">Phase 6 — Exploitation</h3>
+
+    <div class="doc-list">
+
+      <a class="doc-item" href="document/Manuel utilisation.docx" download>
+        📘 Manuel d’utilisation (DOCX)
+      </a>
+
+    </div>
+  </div>
+
+</section>
 
   <!-- ======== FOOTER ======== -->
   <footer class="footer">
