--- a/index.html
+++ b/index.html
@@ -232,10 +232,23 @@
   </section>
 
   <!-- ======== PROJET ======== -->
-  <section id="projet" class="rubrique">
-    <h2>Projet</h2>
-    <p>Contenu à venir...</p>
-  </section>
+ <section id="projet" class="rubrique">
+  <h2>Projet</h2>
+
+  <div class="sub-category">
+    <h3 class="sub-title">Lien vers le projet complet</h3>
+
+    <div class="doc-list">
+      <a class="doc-item"
+         href="https://github.com/dontuseitiguess/centre_formation_app"
+         target="_blank">
+        🌐 Accéder au code source sur GitHub (centre_formation_app)
+      </a>
+    </div>
+  </div>
+
+</section>
+
 
   <!-- ======== AUTRES RESSOURCES ======== -->
   <section id="ressources" class="rubrique">
