--- a/index.html
+++ b/index.html
@@ -251,10 +251,43 @@
 
 
   <!-- ======== AUTRES RESSOURCES ======== -->
-  <section id="ressources" class="rubrique">
-    <h2>Autres ressources</h2>
-    <p>Contenu à venir...</p>
-  </section>
+ <section id="ressources" class="rubrique">
+  <h2>Autres ressources</h2>
+
+  <div class="sub-category">
+    <h3 class="sub-title">Ressources externes utiles</h3>
+
+    <div class="doc-list">
+
+      <a class="doc-item" 
+         href="https://www.odoo.com/documentation/18.0/fr/applications/essentials/activities.html"
+         target="_blank">
+        🟣 Documentation Odoo (activités & modules)
+      </a>
+
+      <a class="doc-item" 
+         href="https://www.drawio.com"
+         target="_blank">
+        🟦 Draw.io – Création de diagrammes UML / MCD / Use Case
+      </a>
+
+      <a class="doc-item" 
+         href="https://www.figma.com/fr-fr/"
+         target="_blank">
+        🎨 Figma – Outil de maquettes & prototypes UI/UX
+      </a>
+
+      <a class="doc-item" 
+         href="https://www.onlinegantt.com/#/gantt"
+         target="_blank">
+        📊 OnlineGantt – Générateur de diagrammes de Gantt
+      </a>
+
+    </div>
+  </div>
+
+</section>
+
 
   <!-- ======== DIAPORAMA SOUTENANCE ======== -->
  <section id="diaporama" class="rubrique">
@@ -392,7 +425,7 @@
 
   <!-- ======== FOOTER ======== -->
   <footer class="footer">
-    <p>© 2025 – L3 MIAGE – Systèmes d’Information</p>
+    <p>© 2025 – L3 MIAGE – Systèmes d’Information par Ritej B</p>
   </footer>
 
 </body>
